<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="img_des">Image</string>
    <string name="share">Share</string>
    <string name="reset">Reset</string>
    <string name="points">Point-</string>
    <string name="total_point">Total Point-</string>
    <string name="wrong_text">Sorry You Are Wrong!!</string>
    <string name="btn_wrong_menu">Home</string>
    <string name="rules">Do you have the knowledge? Test your intelligence with QuizApp the fast moving Social General Knowledge Quiz App.</string>
    <string name="rules0">-First Level and Stage is Open</string>
    <string name="rules1">-Scoring the Target Points to Level up.</string>
    <string name="rules2">-Levels to Unlock by Completing Level Require Point </string>
    <string name="rules3">-Easy and Fun to Play</string>

     <string name="admob_publisher_id">ca-app-pub-8356404931736973/4062413195</string> <!-- Change AdMob Id -->
      <string name="admob_publisher_Interstitial_id"> ca-app-pub-8356404931736973/5539146393</string> <!-- Change AdMob Id -->
    
    
 </resources>