<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
         android:textColor="#f2f2f2"
        android:textSize="22sp"
        android:textStyle="bold" 
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f2f2f2"
        android:textSize="17sp"
        android:padding="5dp"
        android:layout_marginTop="50dp"
       android:lineSpacingExtra="2dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_rules0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules0"
       
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f2f2f2"
        android:textSize="17sp"
        android:layout_margin="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_rules1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f2f2f2"
        android:textSize="17sp"
       android:layout_margin="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_rules2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules2"
        android:textColor="#f2f2f2"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_rules3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f2f2f2"
        android:textSize="17sp"
       android:layout_margin="5dp"
        android:textStyle="bold" />

</LinearLayout>