<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView1"
        android:background="@drawable/point_bg"
        android:orientation="vertical"
        android:id="@+id/point" >

        <TextView
            android:id="@+id/text_leveltotalpts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:paddingLeft="25dp"
            android:text="@string/total_point"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f2f2f2"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_level"
        android:layout_below="@+id/point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/adView"
         >
    </ListView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
         android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adUnitId="@string/admob_publisher_id" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_des"
        android:src="@drawable/logo" />

</RelativeLayout>